# slidel

./: .gitignore  README.md  demo.py  main.py  package-lock.json  pyproject.toml  settings_ui.py  styles.qss  tox.ini
.github/workflows/: ci.yaml  linting.yaml  tests.yaml
GUI/: fileSelectorView.py  main.py
GUI/Components/: UploadButton.py  fileUploder.py
HandGestures/: app.py  keypoint_classification.ipynb
HandGestures/model/: __init__.py
HandGestures/model/keypoint_classifier/: keypoint.csv  keypoint_classifier.hdf5  keypoint_classifier.py  keypoint_classifier.tflite  keypoint_classifier_label.csv
HandGestures/model/point_history_classifier/: point_history_classifier.py
KeyStoning/: keystone.py
LaserTracking/: laser.py
UI/: launchConfig.py  mainUiOne.py
View/: fileSelectorLayout.py  fileSelectorView.py
backend/: .pre-commit-config.yaml  pyproject.toml  tox.ini
backend/src/: db.sqlite3  manage.py
backend/src/account/: admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
backend/src/account/migrations/: 0001_initial.py  0002_usersettings.py  0003_remove_usersettings_first_name_and_more.py  0004_alter_usersettings_user.py  0005_subscription.py  0005_subscription_squashed_0007_alter_subscription_user.py  0006_remove_subscription_users_subscription_user.py  0007_alter_subscription_user.py
backend/src/account/templates/: base.html  create_account.html
backend/src/slidelbackend/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/slides/: admin.py  models.py
backend/src/slides/migrations/: 0001_initial.py  0002_remove_slides_image_slides_uploaded_file.py
backend/tests/: login.py  test_login.py
djangoapp/myapp/accounts/: models.py  urls.py  views.py
djangoapp/myapp/myapp/: settings.py  urls.py
frontend/: .pre-commit-config.yaml  index.html  main.html  package-lock.json  package.json  pyproject.toml
frontend/HandGestures/: app.py
frontend/HandGestures/utils/: __init__.py  cvfpscalc.py
frontend/src/: fileselector.html  index.css  launchconfig.html  login.html  login.js  main.js  renderer.js  settings.css  settings.html  settingsStyles.css  styles.css
frontend_old/: .pre-commit-config.yaml
frontend_py/: .pre-commit-config.yaml  pyproject.toml  tox.ini
frontend_py/HandGestures/: app.py  keypoint_classification.ipynb  point_history_classification.ipynb
frontend_qt/: main.py  mainUiOne.py  pyproject.toml
frontend_qt/ui/: styles.qss
frontend_qt/ui.py/: mainwindow.py  pdf2image.py  secondwindow
pdf 2 image.py/: pdf2image.py
scripts/: poetry_run_wrapper.py  pyupgrade_wrapper.py
ui.py/: mainwindow.py  mywindow.py  pdf2image.py  secondwindow
(+27 files in other folders)
