[tool.poetry]
name = "slidel"
version = "0.1.0"
description = ""
authors = ["Jason Mishike <jasonmishi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyside6 = "^6.6.1"
opencv-python = "^4.9.0.80"
numpi = "^0.3.1"
screeninfo = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
