[tool.poetry]
name = "slidel"
version = "0.1.0"
description = ""
authors = ["Jason Mishike <jasonmishi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.dev-dependencies]
# linting
pre-commit = "^3.6.0"
black = "^24.1.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pyupgrade = "^3.15.0"

# testing
tox = "^4.12.1"
pytest = "^8.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
