[tool.poetry]
name = "slidelbackend"
version = "0.1.0"
description = ""
authors = ["Jason Mishike <jasonmishi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

django = "^5.0.2"

[tool.poetry.dev-dependencies]
# linting
pre-commit = "^3.6.0"
black = "^24.1.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pyupgrade = "^3.15.0"

# testing
pytest = "^8.0.0"
tox = "^4.12.1"
tox-gh-actions = "^3.2.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
